--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "admusicbot",
+  "name": "Replit-Music-Bot-Discord",
   "version": "2.0.0",
   "description": "Discord music bot built with discord.js",
   "main": "index.js",
-  "author": "Felix_PlaYz",
+  "author": "RebootDiscord#4827",
   "private": true,
-  "homepage": "https://github.com/gtagamermods/admusicbot",
-  "repository": "github:gtagamermods/admusicbot",
-  "bugs": "https://github.com/gtagamermods/admusicbot/issues",
+  "homepage": "https://github.com/kirigizakazutovn/Replit-Music-Bot-Discord",
+  "repository": "github:kirigizakazutovn/Replit-Music-Bot-Discord",
+  "bugs": "https://github.com/kirigizakazutovn/Replit-Music-Bot-Discord/issues",
   "engines": {
     "node": ">=12.0.0"
   },
